Fix maincontent elements alignment

--- a/style.css
+++ b/style.css
@@ -146,12 +146,13 @@ header {
     display: grid;
     grid-template-columns: 2fr 1fr;
     background-color: #f0f9ff;
+    column-gap: 15px;
+    row-gap: 30px;
 }
 
 .projects, 
 .trending,
-.cards {
-    margin: 10px;
+.announcements {
     display: grid;
 }
 
@@ -161,6 +162,7 @@ header {
     column-gap: 10px;
     row-gap: 10px;
     grid-row: 1/3;
+    margin-left: 15px;
 }
 
 #project-title {
@@ -168,7 +170,8 @@ header {
 }
 
 .projects .cards,
-.a-container {
+.a-container,
+.t-container {
     border-radius: 10px;
     box-shadow: 2px 2px 5px gray;
     padding: 20px 10px 10px 10px;
@@ -190,11 +193,19 @@ header {
     column-gap: 10px;
 }
 
+.announcements,
+.trending {
+    margin-right: 20px;
+}
+
+.announcements {
+    grid-template-rows: auto 1fr;
+}
+
 .a-container {
     display: grid;
     grid-template-rows: repeat(3, auto);
     row-gap: 10px;
-    margin: 0px 10px;
 }
 
 .a-content:not(:last-child) {
@@ -223,12 +234,12 @@ header {
 .t-container {
     display: grid;
     row-gap: 10px;
-    margin: 0px 10px;
 }
 .t-content {
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: 1fr 1fr;
+    column-gap: 10px;
 }
 
 .t-content img {
